fixed souce alignment

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
 h2 {
   font-family: 'Arial';
   font-size: medium;
-  text-align: left;
+  text-align: center;
 }
 
 h3 {
